test/mulberry/Language/const_object_mutable_arg_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn append(values: List<UInt64>): UInt64 {
  return values.push(4);
}

fn main(): UInt64 {
  const values: List<UInt64> = list.from([1, 2, 3]);
  return append(values);
}

# CHECK: error: cannot bind const object to mutable reference
